--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-azadi",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://github.com/amitazadi/todo-list",
+  "homepage": "https://github.com/amitazadi/todo-list",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -11,7 +11,6 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -43,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
