--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-azadi",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/amitazadi/todo-list",
+  "homepage": "https://amitazadi.github.io/todo-list",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
